[package]
name = "activate-linux"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A minimal Wayland Activate Linux overlay"

[dependencies]
cairo-rs = { version = "0.20", default-features = false }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
